// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should import mesures correctly 1`] = `
Object {
  "added": 2,
  "message": "2 Mesures importées.",
  "success": true,
}
`;

exports[`should import mesures correctly 2`] = `
Array [
  Object {
    "annee": null,
    "cabinet": null,
    "civilite": null,
    "code_postal": null,
    "date_ouverture": null,
    "department_id": null,
    "etablissement": null,
    "etablissement_id": null,
    "extinction": null,
    "id": 7,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": null,
    "status": "Mesure en cours",
    "ti_id": null,
    "type": null,
    "ville": null,
  },
  Object {
    "annee": null,
    "cabinet": null,
    "civilite": null,
    "code_postal": null,
    "date_ouverture": null,
    "department_id": null,
    "etablissement": null,
    "etablissement_id": null,
    "extinction": null,
    "id": 6,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": null,
    "status": "Mesure en cours",
    "ti_id": null,
    "type": null,
    "ville": null,
  },
]
`;

exports[`should skip existing references 1`] = `
Object {
  "added": 1,
  "message": "1 Mesures importées.",
  "success": true,
}
`;

exports[`should skip existing references 2`] = `
Object {
  "added": 1,
  "message": "1 Mesures importées.

Lignes non importées : 2.",
  "success": true,
}
`;
